--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 76,
-"scroll_position": 63.0,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 40,
-"scroll_position": 15.0,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -273,7 +273,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 31,
-"scroll_position": 3.0,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -311,7 +311,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
@@ -521,12 +521,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 15,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 15,
+"selection_to_column": 44,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -535,11 +539,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 4.0,
+"row": 49,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -549,10 +553,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 43,
+"scroll_position": 32.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/auto_load/screen_transition.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
