--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,25 +20,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_objects/bat_enemy/bat_enemy.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/manager/", "res://scenes/game_objects/", "res://scenes/game_objects/wizard_enemy/", "res://scenes/game_objects/bat_enemy/", "res://scenes/game_objects/basic_enemy/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/manager/upgrade_manager.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://resources/", "res://resources/upgrades/", "res://resources/meta_upgrades/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game_objects/bat_enemy/bat_enemy.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/manager/enemy_manager.tscn")
-current_scene="res://scenes/manager/enemy_manager.tscn"
+open_scenes=PackedStringArray("res://scenes/game_objects/bat_enemy/bat_enemy.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/manager/enemy_manager.tscn", "res://scenes/ability/anvil_ability/anvil_ability.tscn", "res://scenes/ability/anvil_ability_controller/anvil_ability_controller.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/manager/upgrade_manager.tscn")
+current_scene="res://scenes/manager/upgrade_manager.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/game_objects/bat_enemy/bat_enemy.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
-selected_script="res://scenes/manager/enemy_manager.gd"
+open_scripts=["res://scenes/ability/anvil_ability/anvil_ability.gd", "res://scenes/ability/anvil_ability_controller/anvil_ability_controller.gd", "res://scenes/game_objects/bat_enemy/bat_enemy.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
+selected_script="res://scenes/manager/upgrade_manager.gd"
 open_help=[]
 script_split_offset=398
 list_split_offset=0
