--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 7,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
+"h_scroll_position": 221,
+"row": 38,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,8 +76,8 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 76,
-"scroll_position": 0.0,
+"row": 69,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -399,16 +399,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
+"row": 10,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 30,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -645,6 +641,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/ability/anvil_ability_controller/anvil_ability_controller.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 5.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/ability/anvil_ability/anvil_ability.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
