--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,16 +20,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/main/main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/main/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/auto_load/meta_progression.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/auto_load/", "res://resources/", "res://resources/meta_upgrades/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/ability/anvil_ability_controller/anvil_ability_controller.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/main/main.tscn", "res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn", "res://scenes/UI/meta_menu.tscn", "res://scenes/UI/main_menu.tscn", "res://scenes/UI/meta_upgrade_card.tscn", "res://scenes/manager/enemy_manager.tscn", "res://scenes/ability/anvil_ability/anvil_ability.tscn")
-current_scene="res://scenes/main/main.tscn"
+open_scenes=PackedStringArray("res://scenes/ability/anvil_ability_controller/anvil_ability_controller.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/main/main.tscn", "res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn", "res://scenes/UI/meta_menu.tscn", "res://scenes/UI/main_menu.tscn", "res://scenes/UI/meta_upgrade_card.tscn", "res://scenes/manager/enemy_manager.tscn", "res://scenes/ability/anvil_ability/anvil_ability.tscn", "res://scenes/auto_load/meta_progression.tscn")
+current_scene="res://scenes/auto_load/meta_progression.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -38,8 +38,8 @@ selected_bottom_panel_item=1
 [ScriptEditor]
 
 open_scripts=["res://scenes/ability/anvil_ability/anvil_ability.gd", "res://scenes/ability/anvil_ability_controller/anvil_ability_controller.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/game_objects/bat_enemy/bat_enemy.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hit_flash_component.gd", "res://scenes/main/main.gd", "res://scenes/UI/main_menu.gd", "res://scenes/UI/meta_menu.gd", "res://scenes/auto_load/meta_progression.gd", "res://resources/meta_upgrades/meta_upgrade.gd", "res://scenes/UI/meta_upgrade_card.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/component/velocity_component.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
-selected_script="res://scenes/component/velocity_component.gd"
-open_help=[]
+selected_script="res://scenes/auto_load/meta_progression.gd"
+open_help=["Array"]
 script_split_offset=398
 list_split_offset=0
 
